// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InputGroup should render \`Disabled\` state 1`] = `
<div>
  <div
    class="form-field-row"
  >
    <label
      class="form-label disabled"
      for="disabled-field"
    >
      Disabled
    </label>
    <div
      class="input-group"
    >
      <div
        class="form-field disabled medium"
      >
        <input
          class="form-input"
          disabled=""
          id="disabled-field"
          placeholder=""
          type="text"
          value=""
        />
      </div>
      <div
        class="input-group-adornment"
      >
        <svg
          fill="currentColor"
          height="22"
          viewBox="0 0 256 256"
          width="22"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M128,24A104,104,0,1,0,232,128,104.11,104.11,0,0,0,128,24Zm0,192a88,88,0,1,1,88-88A88.1,88.1,0,0,1,128,216Zm16-40a8,8,0,0,1-8,8,16,16,0,0,1-16-16V128a8,8,0,0,1,0-16,16,16,0,0,1,16,16v40A8,8,0,0,1,144,176ZM112,84a12,12,0,1,1,12,12A12,12,0,0,1,112,84Z"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`InputGroup should render \`Error\` state 1`] = `
<div>
  <div
    class="form-field-row"
  >
    <label
      class="form-label error"
      for="error-field"
    >
      Error
    </label>
    <div
      class="input-group"
    >
      <div
        class="form-field error medium"
      >
        <input
          class="form-input"
          id="error-field"
          placeholder=""
          type="text"
          value=""
        />
        <span
          class="form-icon"
        >
          <svg
            fill="currentColor"
            height="20"
            viewBox="0 0 256 256"
            width="20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M205.66,194.34a8,8,0,0,1-11.32,11.32L128,139.31,61.66,205.66a8,8,0,0,1-11.32-11.32L116.69,128,50.34,61.66A8,8,0,0,1,61.66,50.34L128,116.69l66.34-66.35a8,8,0,0,1,11.32,11.32L139.31,128Z"
            />
          </svg>
        </span>
      </div>
      <div
        class="input-group-adornment"
      >
        <svg
          fill="currentColor"
          height="22"
          viewBox="0 0 256 256"
          width="22"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M128,24A104,104,0,1,0,232,128,104.11,104.11,0,0,0,128,24Zm0,192a88,88,0,1,1,88-88A88.1,88.1,0,0,1,128,216Zm16-40a8,8,0,0,1-8,8,16,16,0,0,1-16-16V128a8,8,0,0,1,0-16,16,16,0,0,1,16,16v40A8,8,0,0,1,144,176ZM112,84a12,12,0,1,1,12,12A12,12,0,0,1,112,84Z"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`InputGroup should render \`Small\` size 1`] = `
<div>
  <div
    class="form-field-row"
  >
    <label
      class="form-label"
      for="small-field"
    >
      Small
    </label>
    <div
      class="input-group"
    >
      <div
        class="form-field small"
      >
        <input
          class="form-input"
          id="small-field"
          placeholder=""
          type="text"
          value=""
        />
      </div>
      <div
        class="input-group-adornment small"
      >
        <svg
          fill="currentColor"
          height="22"
          viewBox="0 0 256 256"
          width="22"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M128,24A104,104,0,1,0,232,128,104.11,104.11,0,0,0,128,24Zm0,192a88,88,0,1,1,88-88A88.1,88.1,0,0,1,128,216Zm16-40a8,8,0,0,1-8,8,16,16,0,0,1-16-16V128a8,8,0,0,1,0-16,16,16,0,0,1,16,16v40A8,8,0,0,1,144,176ZM112,84a12,12,0,1,1,12,12A12,12,0,0,1,112,84Z"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`InputGroup should render \`Success\` state with \`Large\` size 1`] = `
<div>
  <div
    class="form-field-row"
  >
    <label
      class="form-label success"
      for="success-field"
    >
      Success
    </label>
    <div
      class="input-group"
    >
      <div
        class="form-field success medium"
      >
        <input
          class="form-input"
          id="success-field"
          placeholder=""
          type="text"
          value=""
        />
        <span
          class="form-icon"
        >
          <svg
            fill="currentColor"
            height="20"
            viewBox="0 0 256 256"
            width="20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M229.66,77.66l-128,128a8,8,0,0,1-11.32,0l-56-56a8,8,0,0,1,11.32-11.32L96,188.69,218.34,66.34a8,8,0,0,1,11.32,11.32Z"
            />
          </svg>
        </span>
      </div>
      <div
        class="input-group-adornment"
      >
        <svg
          fill="currentColor"
          height="22"
          viewBox="0 0 256 256"
          width="22"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M128,24A104,104,0,1,0,232,128,104.11,104.11,0,0,0,128,24Zm0,192a88,88,0,1,1,88-88A88.1,88.1,0,0,1,128,216Zm16-40a8,8,0,0,1-8,8,16,16,0,0,1-16-16V128a8,8,0,0,1,0-16,16,16,0,0,1,16,16v40A8,8,0,0,1,144,176ZM112,84a12,12,0,1,1,12,12A12,12,0,0,1,112,84Z"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`InputGroup should render left aligned adornment with text 1`] = `
<div>
  <div
    class="form-field-row"
  >
    <label
      class="form-label"
      for="adorned-field"
    >
      Adorned
    </label>
    <div
      class="input-group"
    >
      <div
        class="input-group-adornment"
      >
        <svg
          fill="currentColor"
          height="22"
          viewBox="0 0 256 256"
          width="22"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M128,24A104,104,0,1,0,232,128,104.11,104.11,0,0,0,128,24Zm0,192a88,88,0,1,1,88-88A88.1,88.1,0,0,1,128,216Zm16-40a8,8,0,0,1-8,8,16,16,0,0,1-16-16V128a8,8,0,0,1,0-16,16,16,0,0,1,16,16v40A8,8,0,0,1,144,176ZM112,84a12,12,0,1,1,12,12A12,12,0,0,1,112,84Z"
          />
        </svg>
        <span>
          Text
        </span>
      </div>
      <div
        class="form-field medium"
      >
        <input
          class="form-input"
          id="adorned-field"
          placeholder=""
          type="text"
          value=""
        />
      </div>
    </div>
  </div>
</div>
`;
